name:                lambdacube-demoscene
version:             0.1.0
synopsis:            Demos using LambdaCube 3D
description:
 
homepage:            http://lambdacube3d.wordpress.com/
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska, Péter Diviánszky, Mate Kovacs
maintainer:          csaba.hruska@gmail.com
-- copyright:
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
stability:           experimental

extra-source-files:

data-files:       

source-repository head
  type:              git
  location:          https://github.com/csabahruska/demoscene.git
{-
executable lambdacube-demo01
  main-is:             Demo01.hs
  -- other-modules:
  other-extensions:    OverloadedStrings, TypeOperators, NoMonomorphismRestriction, ExistentialQuantification, PackageImports, DoRec, ParallelListComp, DataKinds, NamedFieldPuns
  build-depends:       base >=4.6,
                       mtl >=2.2 && <2.3, 
                       bytestring >=0.10 && <0.11, 
                       bytestring-trie >=0.2 && <0.3, 
                       vect >=0.4 && <0.5, 
                       vector >=0.10 && <0.11, 
                       lambdacube-core >=0.1 && <0.2, 
                       lambdacube-edsl >=0.1 && <0.2, 
                       lambdacube-gl >=0.1 && <0.2, 
                       time >=1.4 && <1.5, 
                       OpenGLRaw >=1.4 && <1.6, 
                       GLFW-b ==0.1.0.5, 
                       stb-image ==0.2.1,
                       Noise >=1.0.6 && <1.1,
                       bitmap >=0.0.2 && <0.1,
                       diagrams-rasterific >= 0.1.0.4 && <0.2
  default-language:    Haskell2010
-}
executable knotTheory
  build-depends:
    base < 5
   ,mtl
   ,transformers
   ,reflection
   ,data-reify
   ,vect
   ,vector
   ,containers
   ,bytestring
   ,bytestring-trie
   ,bitmap
   ,stb-image
   ,Noise
   ,ad
   ,time
   ,GLFW-b
   ,lambdacube-gl
   ,FontyFruity
   ,lafonten
   ,proteaaudio
  main-is:
    knotTheory.hs
  other-modules:
    AD
    Geometry
    Utility
    Blur
    Scanlines
    BuiltinVec
    Vignette
    Knot
    KnotsLC
    Program
  ghc-options:
    -Wall
    -fwarn-incomplete-record-updates
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-type-defaults
    -fno-warn-incomplete-patterns

