name:                demoscene
version:             0.1.0
synopsis:            Demos using LambdaCube 3D
description:
 
homepage:            http://lambdacube3d.wordpress.com/
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska, Péter Diviánszky, Mate Kovacs
maintainer:          csaba.hruska@gmail.com
-- copyright:
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
stability:           experimental

extra-source-files:

data-files:       

source-repository head
  type:              git
  location:          https://github.com/csabahruska/demoscene.git

executable knotTheory
  build-depends:
    base < 5,
    mtl,
    transformers,
    reflection,
    data-reify,
    vect,
    vector,
    containers,
    bytestring,
    bytestring-trie,
    bitmap,
    stb-image,
    Noise,
    ad,
    time,
    GLFW-b,
    lambdacube-gl,
    FontyFruity,
    lafonten,
    proteaaudio
  main-is:
    knotTheory.hs
  other-modules:
    AD
    Geometry
    Utility
    Blur
    Scanlines
    BuiltinVec
    Vignette
    Knot
    KnotsLC
    Program
  ghc-options:
    -Wall
    -fwarn-incomplete-record-updates
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-type-defaults
    -fno-warn-incomplete-patterns

executable test2D
  build-depends:
    base < 5,
    stb-image,
    bitmap,
    Noise,
    OpenGLRaw,
    bytestring,
    elerea,
    time,
    vect,
    vector,
    GLFW-b,
    lambdacube-gl,
    bytestring-trie
  main-is:
    test2D.hs
  other-modules:
    Utils

executable testShaderToy
  build-depends:
    base < 5,
    stb-image,
    bitmap,
    Noise,
    OpenGLRaw,
    bytestring,
    elerea,
    time,
    vect,
    vector,
    GLFW-b,
    lambdacube-gl,
    bytestring-trie
  main-is:
    testShaderToy.hs
  other-modules:
    Utils

executable testRayMarch
  build-depends:
    base < 5,
    stb-image,
    bitmap,
    Noise,
    OpenGLRaw,
    bytestring,
    elerea,
    time,
    vect,
    vector,
    GLFW-b,
    lambdacube-gl,
    bytestring-trie
  main-is:
    testRayMarch.hs
  other-modules:
    Utils

executable testVSM
  build-depends:
    base < 5,
    stb-image,
    bitmap,
    Noise,
    OpenGLRaw,
    bytestring,
    elerea,
    time,
    vect,
    vector,
    GLFW-b,
    lambdacube-gl,
    bytestring-trie
  main-is:
    testVSM.hs
  other-modules:
    Utils

executable testSprite
  build-depends:
    base < 5,
    stb-image,
    bitmap,
    Noise,
    OpenGLRaw,
    bytestring,
    elerea,
    time,
    vect,
    vector,
    GLFW-b,
    lambdacube-gl,
    bytestring-trie
  main-is:
    testSprite.hs
  other-modules:
    Utils

executable testPointSprite
  build-depends:
    base < 5,
    stb-image,
    bitmap,
    Noise,
    OpenGLRaw,
    bytestring,
    elerea,
    time,
    vect,
    vector,
    GLFW-b,
    lambdacube-gl,
    bytestring-trie
  main-is:
    testPointSprite.hs
  other-modules:
    Utils

executable terminal
  build-depends:
    base < 5,
    stb-image,
    bitmap,
    Noise,
    OpenGLRaw,
    bytestring,
    elerea,
    time,
    vect,
    vector,
    GLFW-b,
    FontyFruity,
    lafonten,
    lambdacube-gl,
    bytestring-trie
  main-is:
    terminal.hs
  other-modules:
    Utils
